--- a/investix/sass/blocks/nav.scss
+++ b/investix/sass/blocks/nav.scss
@@ -98,6 +98,14 @@
   .nav {
     width: 100%;
   }
+  
+  .nav__list {
+    justify-content: space-around;
+  }
+  
+  .nav__sublist {
+    top: 36px;
+  }
 }
 
 @media screen and ($mobile-widths) {
