--- a/investix/sass/blocks/text.scss
+++ b/investix/sass/blocks/text.scss
@@ -32,3 +32,11 @@
     font-weight: 700;
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .text__banner {
+    font-size: 20px;
+  }
+}
