--- a/investix/sass/blocks/inner.scss
+++ b/investix/sass/blocks/inner.scss
@@ -8,6 +8,11 @@
     padding: 180px 0 42px 0;
     background: url('../img/title1.jpg') no-repeat center / cover;
   }
+  
+  &--img2 {
+    padding: 180px 0 42px 0;
+    background: url('../img/title2.jpg') no-repeat center / cover;
+  }
 }
 
 .inner__name {
