--- a/investix/sass/style.scss
+++ b/investix/sass/style.scss
@@ -27,3 +27,6 @@
 @import 'blocks/table';
 @import 'blocks/badge';
 @import 'blocks/text';
+@import 'blocks/add';
+@import 'blocks/program';
+@import 'blocks/quotes';
