--- a/investix/sass/blocks/inner.scss
+++ b/investix/sass/blocks/inner.scss
@@ -13,6 +13,11 @@
     padding: 180px 0 42px 0;
     background: url('../img/title2.jpg') no-repeat center / cover;
   }
+  
+  &--img3 {
+    padding: 180px 0 42px 0;
+    background: url('../img/title3.jpg') no-repeat center / cover;
+  }
 }
 
 .inner__name {
