--- a/investix/sass/blocks/inner.scss
+++ b/investix/sass/blocks/inner.scss
@@ -18,6 +18,11 @@
     padding: 180px 0 42px 0;
     background: url('../img/title3.jpg') no-repeat center / cover;
   }
+  
+  &--img4 {
+    padding: 180px 0 42px 0;
+    background: url('../img/title4.jpg') no-repeat center / cover;
+  }
 }
 
 .inner__name {
