--- a/investix/sass/blocks/text.scss
+++ b/investix/sass/blocks/text.scss
@@ -51,6 +51,19 @@
 .text__flex {
   display: flex;
   justify-content: space-between;
+  
+  &--start {
+    justify-content: flex-start;
+  }
+}
+
+.text__address {
+  width: 500px;
+  font-weight: 700;
+}
+
+.text__map {
+  width: 100%;
 }
 
 .text__box {
@@ -222,5 +235,9 @@
     &--medium {
       font-size: 40px;
     }
+  }
+  
+  .text__address {
+    width: auto;
   }
 }
