--- a/investix/sass/blocks/inner.scss
+++ b/investix/sass/blocks/inner.scss
@@ -23,6 +23,11 @@
     padding: 180px 0 42px 0;
     background: url('../img/title4.jpg') no-repeat center / cover;
   }
+  
+  &--img5 {
+    padding: 180px 0 42px 0;
+    background: url('../img/title5.jpg') no-repeat center / cover;
+  }
 }
 
 .inner__name {
