--- a/mm/sass/blocks/header.scss
+++ b/mm/sass/blocks/header.scss
@@ -8,6 +8,10 @@
   background: rgba(37, 37, 37, 0.7);
 }
 
+.header__logo {
+  width: 180px;
+}
+
 @media screen and ($tablet-widths) {}
 
 @media screen and ($mobile-widths) {
