--- a/mm/templates/account-types.html
+++ b/mm/templates/account-types.html
@@ -64,7 +64,7 @@
     </header>
     <div class="container">
       <div class="title  title--up">
-        <h1>Account types</h1>
+        <h1 class="lang-account-types-name">Account types</h1>
         <p class="title__sub">Our accounts provide benefits of Forex market to private and corporate clients, using one of the most advanced trading platform available.</p>
       </div>
       <table class="table">
