--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -261,6 +261,9 @@ body {
   border-bottom: 1px solid #525252;
   background: rgba(37, 37, 37, 0.7); }
 
+.header__logo {
+  width: 180px; }
+
 @media screen and (max-width: 768px) {
   .header {
     padding-top: 30px; }
@@ -432,7 +435,7 @@ body {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  width: 250px;
+  width: 300px;
   margin: auto;
   padding-left: 0;
   list-style: none; }
@@ -491,7 +494,7 @@ body {
     -webkit-box-ordinal-group: 2;
     -ms-flex-order: 1;
     order: 1;
-    width: 220px; }
+    width: 270px; }
     .sub-nav a {
       font-size: 12px; } }
 
@@ -610,8 +613,24 @@ body {
   -ms-flex-item-align: center;
   align-self: center; }
   .trade__link a {
+    position: relative;
     margin-right: 10px;
-    font-size: 0; }
+    font-size: 0;
+    opacity: 0.5;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+    .trade__link a::before {
+      content: 'Coming Soon';
+      position: absolute;
+      bottom: -20px;
+      width: 192px;
+      color: #000;
+      font-size: 15px;
+      font-family: 'SF UI Display Regular', sans-serif;
+      text-align: center;
+      opacity: 1; }
+    .trade__link a:hover {
+      opacity: 1; }
 
 @media screen and (max-width: 1200px) {
   .trade__flex {
@@ -637,8 +656,9 @@ body {
     padding-top: 30px; }
     .trade__right video {
       display: none; }
-  .trade__link {
-    text-align: center; } }
+  .trade__link a {
+    display: block;
+    margin: 0 0 30px 0; } }
 
 .edge {
   background: url("../img/edge.png") no-repeat;
@@ -967,7 +987,7 @@ body {
   .title {
     text-align: center; }
     .title h1 {
-      font-size: 30px; }
+      font-size: 25px; }
   .title__sub {
     text-align: center; } }
 
@@ -1603,6 +1623,7 @@ body {
     align-items: center; }
   .trader__left {
     width: auto;
+    margin: 20px 0 0 0;
     -webkit-box-ordinal-group: 11;
     -ms-flex-order: 10;
     order: 10; }
@@ -1614,7 +1635,10 @@ body {
     -ms-flex-order: 5;
     order: 5; }
     .trader__right img {
-      max-width: 100%; } }
+      max-width: 100%; }
+    .trader__right a {
+      display: block;
+      margin: 0 auto 30px auto; } }
 
 .spread {
   padding-bottom: 70px;
