--- a/mm/templates/mobile.html
+++ b/mm/templates/mobile.html
@@ -76,10 +76,10 @@
           </div>
           <div class="trader__right">
             <img src="../img/mobile.png" alt=""><br>
-            <a href="#">
+            <a href="https://itunes.apple.com/ua/app/forex-on-the-go/id963664270?l=ru&mt=12">
               <img src="../img/apple.png" alt="">
             </a>
-            <a href="#">
+            <a href="https://play.google.com/store/apps/details?id=net.metaquotes.metatrader4" target="_blank">
               <img src="../img/google.png" alt="">
             </a>
           </div>
