--- a/deep/sass/blocks/header.scss
+++ b/deep/sass/blocks/header.scss
@@ -1,4 +1,7 @@
 .header {
+  position: absolute;
+  top: 0;
+  left: 50%;
   padding: 25px 0;
-  background: #212121;
+  transform: translateX(-50%);
 }
