--- a/deep/css/style.css
+++ b/deep/css/style.css
@@ -150,6 +150,7 @@ body {
   color: #fff;
   font-size: 16px;
   font-weight: 700;
+  border: none;
   border-radius: 5px;
   text-align: center;
   text-decoration: none;
@@ -396,6 +397,162 @@ body {
     width: auto; }
   .app__button {
     margin: auto; } }
+
+.modal {
+  position: absolute;
+  left: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  width: 1170px;
+  -webkit-box-shadow: 2px 0 60px #828282;
+  box-shadow: 2px 0 60px #828282;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  z-index: 2; }
+  .modal--inactive {
+    top: -1000px; }
+  .modal--active {
+    top: 130px; }
+
+.modal__left,
+.modal__right {
+  width: 50%; }
+
+.modal__left {
+  background: url("../img/modal-left.jpg") no-repeat center/cover; }
+
+.modal__right {
+  position: relative;
+  padding: 55px 100px 35px 100px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  background: #FCFCFC; }
+
+.modal__close {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  width: 15px;
+  height: 15px;
+  font-size: 0;
+  border: none;
+  background: url("../img/close.svg") no-repeat center/cover;
+  cursor: pointer; }
+
+.modal__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column; }
+
+.modal__name {
+  margin: 0 0 30px 0;
+  color: #171A36;
+  font-size: 36px;
+  font-family: 'ITC Avant Garde Gothic Std Book', sans-serif;
+  text-align: center; }
+
+.modal__input {
+  margin: 0 0 25px 0;
+  padding: 15px 20px;
+  color: #171A36;
+  font-size: 16px;
+  font-weight: 400;
+  border: 0.5px solid #0F0F0F;
+  border-radius: 5px;
+  background: #fff; }
+  .modal__input:last-of-type {
+    margin: 0 0 35px 0; }
+  .modal__input::-webkit-input-placeholder {
+    color: #CBCBCB;
+    font-size: 16px;
+    font-weight: 400; }
+  .modal__input:-ms-input-placeholder {
+    color: #CBCBCB;
+    font-size: 16px;
+    font-weight: 400; }
+  .modal__input::-ms-input-placeholder {
+    color: #CBCBCB;
+    font-size: 16px;
+    font-weight: 400; }
+  .modal__input::placeholder {
+    color: #CBCBCB;
+    font-size: 16px;
+    font-weight: 400; }
+
+.modal__forgot {
+  margin: 0 0 45px 0;
+  color: #CBCBCB;
+  font-size: 16px;
+  font-weight: 400;
+  text-align: center; }
+
+.modal__submit {
+  margin: 0 auto 80px auto; }
+
+.modal__social {
+  margin: 0 0 145px 0; }
+
+.modal__another {
+  display: block;
+  margin: 0 0 30px 0;
+  color: #171A36;
+  font-size: 18px;
+  font-weight: 400;
+  text-align: center; }
+
+.modal__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.modal__link {
+  padding: 15px 0 15px 68px;
+  color: #CBCBCB;
+  font-size: 16px;
+  font-weight: 400;
+  text-decoration: none; }
+  .modal__link--facebook {
+    background: url("../img/facebook.svg") no-repeat left; }
+  .modal__link--google {
+    background: url("../img/google-plus.svg") no-repeat left; }
+  .modal__link--cta {
+    padding: 0;
+    text-decoration: underline; }
+
+.modal__cta {
+  margin: 0;
+  color: #171A36;
+  font-size: 16px;
+  font-weight: 400;
+  text-align: center; }
+
+.modal__overlay {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  opacity: 0.8;
+  -webkit-transition: 0.3s;
+  transition: 0.3s; }
+  .modal__overlay--inactive {
+    z-index: -1; }
+  .modal__overlay--active {
+    background: #fff;
+    z-index: 1; }
 
 .footer {
   padding: 25px 0;
