--- a/deep/sass/blocks/button.scss
+++ b/deep/sass/blocks/button.scss
@@ -4,6 +4,7 @@
   color: #fff;
   font-size: 16px;
   font-weight: 700;
+  border: none;
   border-radius: 5px;
   text-align: center;
   text-decoration: none;
