--- a/deep/css/style.css
+++ b/deep/css/style.css
@@ -399,7 +399,7 @@ body {
     margin: auto; } }
 
 .modal {
-  position: absolute;
+  position: fixed;
   left: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -412,13 +412,13 @@ body {
   box-shadow: 2px 0 60px #828282;
   -webkit-transition: 0.5s;
   transition: 0.5s;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
   z-index: 2; }
   .modal--inactive {
     top: -1000px; }
   .modal--active {
-    top: 130px; }
+    top: 50%; }
 
 .modal__left,
 .modal__right {
@@ -467,9 +467,10 @@ body {
   color: #171A36;
   font-size: 16px;
   font-weight: 400;
-  border: 0.5px solid #0F0F0F;
+  border: 1px solid #0F0F0F;
   border-radius: 5px;
-  background: #fff; }
+  background: #fff;
+  outline: none; }
   .modal__input:last-of-type {
     margin: 0 0 35px 0; }
   .modal__input::-webkit-input-placeholder {
@@ -488,6 +489,25 @@ body {
     color: #CBCBCB;
     font-size: 16px;
     font-weight: 400; }
+  .modal__input--register {
+    width: 100%;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box; }
+    .modal__input--register:last-of-type {
+      margin: 0 0 25px 0; }
+
+.modal__password {
+  position: relative; }
+
+.modal__show {
+  position: absolute;
+  top: 16px;
+  right: 20px;
+  width: 27px;
+  height: 16px;
+  border: none;
+  background: url("../img/eye.svg") no-repeat center/cover;
+  cursor: pointer; }
 
 .modal__forgot {
   margin: 0 0 45px 0;
@@ -495,6 +515,12 @@ body {
   font-size: 16px;
   font-weight: 400;
   text-align: center; }
+
+.modal__agree {
+  margin: -10px 0 45px 0;
+  color: #CBCBCB;
+  font-size: 12px;
+  font-weight: 400; }
 
 .modal__submit {
   margin: 0 auto 80px auto; }
@@ -547,12 +573,44 @@ body {
   background: transparent;
   opacity: 0.8;
   -webkit-transition: 0.3s;
-  transition: 0.3s; }
+  transition: 0.3s;
+  cursor: pointer; }
   .modal__overlay--inactive {
     z-index: -1; }
   .modal__overlay--active {
     background: #fff;
     z-index: 1; }
+
+@media screen and (max-width: 1460px) {
+  .modal {
+    width: 95%; }
+    .modal--active {
+      position: absolute;
+      top: 130px;
+      -webkit-transform: translateX(-50%);
+      transform: translateX(-50%); }
+  .modal__right {
+    padding: 55px 50px 35px 50px; }
+  .modal__link {
+    padding: 5px 0 5px 40px; }
+    .modal__link--cta {
+      padding: 0; }
+  .modal__cta {
+    font-size: 15px; } }
+
+@media screen and (max-width: 768px) {
+  .modal__left {
+    display: none; }
+  .modal__left,
+  .modal__right {
+    width: 100%; }
+  .modal__social {
+    margin: 0 0 50px 0; }
+  .modal__flex {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+  .modal__link--facebook, .modal__link--google {
+    margin: 0 0 10px 0; } }
 
 .footer {
   padding: 25px 0;
