--- a/deep/css/style.css
+++ b/deep/css/style.css
@@ -527,6 +527,8 @@ body {
 
 .modal__social {
   margin: 0 0 145px 0; }
+  .modal__social--register {
+    margin: 0 0 80px 0; }
 
 .modal__another {
   display: block;
