--- a/dating/sass/style.scss
+++ b/dating/sass/style.scss
@@ -6,3 +6,8 @@
 @import 'blocks/header';
 @import 'blocks/nav';
 @import 'blocks/button';
+@import 'blocks/girl';
+@import 'blocks/features';
+@import 'blocks/how';
+@import 'blocks/love';
+@import 'blocks/footer';
