--- a/dating/css/style.css
+++ b/dating/css/style.css
@@ -476,18 +476,23 @@ body {
   background-repeat: no-repeat;
   background-size: 14px;
   border-radius: 50%;
+  background: transparent;
   border: 2px #ffffff solid;
-  margin: 4px 0; }
+  margin: 4px 0;
+  outline: none;
+  cursor: pointer; }
   .btn.nav .fa {
     font-size: 22px; }
   .btn.nav:hover {
     opacity: 0.6; }
 
 .btn.prev {
-  padding-right: 2px; }
+  background: url("../img/slider-arrow.png") no-repeat center;
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg); }
 
 .btn.next {
-  padding-left: 4px; }
+  background: url("../img/slider-arrow.png") no-repeat center; }
 
 .footer {
   padding: 30px 0;
