--- a/dating/sass/blocks/how.scss
+++ b/dating/sass/blocks/how.scss
@@ -138,8 +138,11 @@
   -webkit-background-size: 14px;
   background-size: 14px;
   border-radius: 50%;
+  background: transparent;
   border: 2px #ffffff solid;
   margin: 4px 0;
+  outline: none;
+  cursor: pointer;
     .fa{
       font-size: 22px;
     }
@@ -147,9 +150,12 @@
       opacity: 0.6;
     }
 }
-.btn.prev{
-  padding-right: 2px;
+
+.btn.prev {
+  background: url('../img/slider-arrow.png') no-repeat center;
+  transform: rotate(180deg);
 }
-.btn.next{
-  padding-left: 4px;
+
+.btn.next {
+  background: url('../img/slider-arrow.png') no-repeat center;
 }
